--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-imask": "^6.4.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.0.1",
+    "spin.js": "^4.1.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
