--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react-imask": "^6.4.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.0.1",
-    "react-loader-spinner": "^5.1.3",
     "spin.js": "^4.1.1",
+    "vue-simple-spinner": "^1.2.10",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
