--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-imask": "^6.4.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.0.1",
