--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.5",
     "prettier": "^2.6.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-imask": "^6.4.2",
+    "react-loader-spinner": "^6.0.0-0",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.0.1",
     "spin.js": "^4.1.1",
